<resources>
    <string name="app_name">MobilePhoneTools</string>

    <string name="id_0_20">0-20 dB: 极静, 几乎感觉不到</string>
    <string name="id_20_40">20-40 dB: 安静, 轻声交谈</string>
    <string name="id_40_60">40-60 dB: 一般, 普通室内谈话</string>
    <string name="id_60_70">60-70 dB: 吵闹, 大声说话</string>
    <string name="id_70_90">70-90 dB: 很吵, 可使神经细胞遭到破坏</string>
    <string name="id_90_110">90-110 dB: 吵闹加剧，可使听力受损</string>
    <string name="id_Height">请输入物体高度(单位m):</string>
    <string name="id_cap_cam">摄像设备没有准备好或摄像设备被禁用</string>
    <string name="id_compare_East">正东</string>
    <string name="id_compare_Eastheast">东南</string>
    <string name="id_compare_North">正北</string>
    <string name="id_compare_Northeast">东北</string>
    <string name="id_compare_South">正南</string>
    <string name="id_compare_Southeast">西南</string>
    <string name="id_compare_West">正西</string>
    <string name="id_compare_Westheast">西北</string>
    <string name="id_soundmeter">分贝仪</string>
    <string name="id_soundmeter_10">100dB：地铁列车，吹风机</string>
    <string name="id_soundmeter_11">110dB：摇滚音乐，小孩的哭声</string>
    <string name="id_soundmeter_12">120dB：刺耳声音的底限，雷声</string>
    <string name="id_soundmeter_13">130dB：100英尺内的喷气式发动机声</string>
    <string name="id_soundmeter_18">180dB：航天飞机发射</string>
    <string name="id_soundmeter_2">20dB：树叶发出的沙沙声，钟表的滴答声</string>
    <string name="id_soundmeter_3">30dB：3英尺内的轻声耳语，图书馆</string>
    <string name="id_soundmeter_4">40dB：安静的住宅区，公园</string>
    <string name="id_soundmeter_5">50dB：安静的办公室，安静的街道</string>
    <string name="id_soundmeter_6">60dB：3英尺内的正常交谈</string>
    <string name="id_soundmeter_7">70dB：繁忙的交通，手机铃声</string>
    <string name="id_soundmeter_8">80dB：繁忙的街道，闹钟铃声</string>
    <string name="id_soundmeter_9">90dB：3英尺内的工厂机器声</string>
    <string name="id_tip">提示：先输入被测物体高度，再将被测物体顶端和底端分别与两线重合</string>
    <string name="id_toptextrange">距离:</string>
    <string name="id_toptextunits">米</string>
</resources>
